[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/HomelessWithCart.gd" type="Script" id=1]
[ext_resource path="res://assets/throw_animation/throw-0.png" type="Texture" id=2]
[ext_resource path="res://assets/throw_animation/throw-1.png" type="Texture" id=3]
[ext_resource path="res://assets/throw_animation/throw-2.png" type="Texture" id=4]
[ext_resource path="res://assets/throw_animation/throw-3.png" type="Texture" id=5]
[ext_resource path="res://assets/throw_animation/throw-4.png" type="Texture" id=6]
[ext_resource path="res://assets/walk_animation/walk-0.png" type="Texture" id=7]
[ext_resource path="res://assets/walk_animation/walk-1.png" type="Texture" id=8]
[ext_resource path="res://assets/walk_animation/walk-2.png" type="Texture" id=9]
[ext_resource path="res://assets/walk_animation/walk-3.png" type="Texture" id=10]
[ext_resource path="res://assets/cart-no-wheel.png" type="Texture" id=11]
[ext_resource path="res://assets/cart-wheel.png" type="Texture" id=12]
[ext_resource path="res://nodes/TrashTower.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "throw",
"speed": 20.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 105, 169 )

[node name="HomelessWithCart" type="Area2D"]
position = Vector2( 628, 600 )
script = ExtResource( 1 )

[node name="ThrowAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 198.195, -286.822 )
frames = SubResource( 1 )
animation = "throw"
frame = 4
playing = true

[node name="WalkAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 143.488, -170.336 )
frames = SubResource( 2 )
animation = "walk"
frame = 3
playing = true

[node name="Arm" type="Sprite" parent="."]
position = Vector2( 198.578, -287.623 )
texture = ExtResource( 2 )

[node name="Cart" type="Sprite" parent="."]
position = Vector2( -48, -184 )
texture = ExtResource( 11 )

[node name="Wheel" type="Sprite" parent="."]
position = Vector2( -150, -88 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 151, -170 )
shape = SubResource( 3 )

[node name="TrashTower" parent="." instance=ExtResource( 13 )]
position = Vector2( -150.455, -169.964 )
[connection signal="area_entered" from="." to="." method="_on_HomelessWithCart_area_entered"]
[connection signal="animation_finished" from="ThrowAnimation" to="ThrowAnimation" method="set" binds= [ "visible", false ]]
